gestor-api/k8s/gestor-api-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: gestor
    namespace: gestor
    labels:
        app: gestor
        tier: frontend
spec:
    type: NodePort
    ports:
        - port: 8000
    selector:
        app: gestor
        tier: frontend
