gestor-api/k8s/gestor-api-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: stg-gestor-ssl-ingress
    namespace: gestor
    annotations:
        kubernetes.io/ingress.global-static-ip-name: stg-gestor-ssl-ingress-ip
        networking.gke.io/managed-certificates: stg-gestor-ssl-certificate
        nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
        kubernetes.io/ingress.allow-http: "false"
        nginx.ingress.kubernetes.io/proxy-connect-timeout: "240s"
        nginx.ingress.kubernetes.io/proxy-send-timeout: "240s"
        nginx.ingress.kubernetes.io/proxy-read-timeout: "240s"
        ingress.kubernetes.io/proxy-connect-timeout: "240s"
        ingress.kubernetes.io/proxy-send-timeout: "240s"
        ingress.kubernetes.io/proxy-read-timeout: "240s"
spec:
    rules:
        - host: dev-gestorapi.alfreddelivery.com
          http:
              paths:
                  - backend:
                        serviceName: gestor
                        servicePort: 8000
